--- a/package.json
+++ b/package.json
@@ -8,28 +8,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "expo": "~38.0.8",
+    "expo-status-bar": "^1.0.2",
     "fast-html-parser": "^1.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-multi-selectbox": "^1.3.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-svg": "^12.1.0",
-    "react-native-web": "~0.13.12",
-    "react-native-webview": "10.7.0",
+    "react-native-swipeout": "^2.3.6",
+    "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-transitions": "^1.0.12",
     "react-redux": "^7.2.1",
+    "react-xml-parser": "^1.1.6",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "react-native-webview": "9.4.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
