--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@condenast/xml-to-react": "^1.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "fast-html-parser": "^1.0.1",
@@ -20,19 +22,20 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-multi-selectbox": "^1.3.0",
     "react-native-reanimated": "^1.9.0",
+    "react-native-rss-parser": "^1.5.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "9.4.0",
     "react-navigation": "^4.4.0",
     "react-navigation-transitions": "^1.0.12",
     "react-redux": "^7.2.1",
     "react-xml-parser": "^1.1.6",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
-    "util": "^0.12.3",
-    "react-native-webview": "9.4.0"
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
