--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.2.1",
     "react-xml-parser": "^1.1.6",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "util": "^0.12.3"
   },
