--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@condenast/xml-to-react": "^1.0.0",
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.7",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@redux-offline/redux-offline": "^2.6.0-native.0",
     "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
